# qontrol

./: .clang-format  .gitignore  CMakeLists.txt  README.md  USAGE.md  build.sh  justfile
.github/workflows/: ci.yml
docs/: memory-leak-detection.md
examples/: 01_basic_layout.cpp  02_screen_example.cpp  03_widgets.cpp  04_modal.cpp  CMakeLists.txt
include/: Qontrol
resources/icons/: README.md  icons.h  minus.h  plus.h
src/: Column.cpp  Column.h  Controller.cpp  Controller.h  Grid.cpp  Grid.h  Item.cpp  Item.h  MainWindow.cpp  MainWindow.h  Modal.cpp  Modal.h  Panel.cpp  Panel.h  Row.cpp  Row.h  Screen.cpp  Screen.h  Window.cpp  Window.h  common.h
src/widgets/: Collapsible.cpp  Collapsible.h  ComboBox.cpp  ComboBox.h  ComboLine.cpp  ComboLine.h  Input.cpp  Input.h  InputLine.cpp  InputLine.h  Slider.cpp  Slider.h  ToggleSwitch.cpp  ToggleSwitch.h  Widget.h
tests/: CMakeLists.txt  test_layout_api.cpp  test_parent_child.cpp
